# Multithreading-GPU-CPU

./: .gitignore  CMakeLists.txt  README.md
include/: ICompute.h  cpu_compute.h  gpu_compute.h
shaders/: compute_shader.glsl
src/: CMakeLists.txt  cpu_compute.cpp  gpu_compute.cpp  main.cpp
tests/: CMakeLists.txt  test_compute.cpp
